--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
+/migrations
 
 # mypy
 .mypy_cache/
@@ -147,4 +148,3 @@ dmypy.json
 
 # папки со статикой и медиа
 media/
-
